# robotics_software_nd

./: README.md
gazebo_basics/myrobot/: CMakeLists.txt
gazebo_basics/myrobot/model/mybuilding/: model.sdf
gazebo_basics/myrobot/model/robot/: model.sdf
gazebo_basics/myrobot/script/: hello.cpp
gazebo_basics/myrobot/world/: myworld
gazebo_basics/project1/: CMakeLists.txt
gazebo_basics/project1/script/: welcome.cpp
gazebo_basics/project1/world/: house
localization/kalman_filters/: 1d_kalman_filter.cpp  compute_probability.cpp  multi_dimensional_kf.cpp  new_estimate.cpp  state_prediction.cpp
localization/kf_lab/: RvizLaunch.launch
localization/kf_lab/main/: CMakeLists.txt  package.xml
localization/kf_lab/main/launch/: main.launch
localization/kf_lab/main/rviz/: turtle3.rviz
localization/mcl/: cbelief.cpp
localization/mcl_lab/: resampling.cpp  robot_localization.cpp
localization/mcl_lab/MCL_Lab/: main.cpp
localization/where_am_i/my_robot/: package.xml
mapping_slam/gridbased_fastslam/robot_pose_ekf/: robot_pose_ekf.launch
mapping_slam/map_my_world/my_robot/: CMakeLists.txt
mapping_slam/occupancy_grid_mapping/: multi_mapping_fusion.cpp
path_planning/classic_path_planning/: minkowski_sum.cpp
path_planning/path_planning_lab/: a_star.cpp  bfs.cpp
path_planning/path_planning_lab/a_star_real_world/: app
ros_essentials/chase_it/ball_chaser/: CMakeLists.txt  package.xml
ros_essentials/chase_it/my_robot/: package.xml
ros_essentials/simple_arm/: CMakeLists.txt
ros_essentials/simple_arm/launch/: robot_spawn.launch
(+24 files in other folders)
